--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -24,8 +24,8 @@
         </div>
         <div class="card-body">
             <p class="card-text">a place for storing your diary every day, and every where</p>
-            <a href="" class="btn btn-outline-info wave-effect">Login</a>
-            <a href="" class="btn btn-outline-info wave-effect">Register</a>
+            <a href="/login/" class="btn btn-outline-info wave-effect">Login</a>
+            <a href="/register/" class="btn btn-outline-info wave-effect">Register</a>
         </div>
     </div>
 </div>
