--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
 
     {% if request.user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 60px;">
-        <a class="navbar-brand ml-5" href="../../../">My ToDo List</a>
+
+        <a class="navbar-brand ml-5" href="{% url 'home:index' %}">My Diary</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,10 +25,10 @@
         <div class="collapse navbar-collapse mr-5" id="navbarSupportedContent">
             <ul class="navbar-nav ml-lg-auto">
                 <li class="nav-item active">
-                    <a href="{% url 'home:index' %}" class="nav-link">Add Diary</a>
+                    <a href="{% url 'diary:add_diary' %}" class="nav-link">Add Diary</a>
                 </li>
                 <li class="nav-item active">
-                    <a href="../my_todo/" class="nav-link">My Diary</a>
+                    <a href="{% url 'diary:my_diary' %}" class="nav-link">My Diary</a>
                 </li>
                 <li class="nav-item active">
                     <a href="../my_todo/" class="nav-link">My Account</a>
@@ -40,7 +42,7 @@
 
     {% else %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 60px;">
-        <a class="navbar-brand ml-5" href="{% url 'home:index' %}">My ToDo List</a>
+        <a class="navbar-brand ml-5" href="{% url 'home:index' %}">My Diary</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
